src/qir/snapshots/hugr_qir__qir__futures_ext__test__emit@llvm14_tket.futures.Dup.snap
---
source: src/qir/futures_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private { i1, i1 } @_hl.main.1(i1 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %mrv = insertvalue { i1, i1 } undef, i1 %0, 0
  %mrv6 = insertvalue { i1, i1 } %mrv, i1 %0, 1
  ret { i1, i1 } %mrv6
}
