src/qir/snapshots/hugr_qir__qir__futures_ext__test__emit@llvm14_tket.futures.Free.snap
---
source: src/qir/futures_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private void @_hl.main.1(i1 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  ret void
}
