src/qir/snapshots/hugr_qir__qir__futures_ext__test__emit@llvm14_tket.futures.Read.snap
---
source: src/qir/futures_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private i1 @_hl.main.1(i1 %0) {
alloca_block:
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  %1 = select i1 %0, i1 true, i1 false
  ret i1 %1
}
