src/qir/snapshots/hugr_qir__qir__futures_ext__test__emit@pre-mem2reg@llvm14_tket.futures.Free.snap
---
source: src/qir/futures_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private void @_hl.main.1(i1 %0) {
alloca_block:
  %"2_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i1 %0, i1* %"2_0", align 1
  %"2_01" = load i1, i1* %"2_0", align 1
  ret void
}
