src/qir/snapshots/hugr_qir__qir__futures_ext__test__emit@pre-mem2reg@llvm14_tket.futures.Read.snap
---
source: src/qir/futures_ext.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define private i1 @_hl.main.1(i1 %0) {
alloca_block:
  %"0" = alloca i1, align 1
  %"2_0" = alloca i1, align 1
  %"4_0" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i1 %0, i1* %"2_0", align 1
  %"2_01" = load i1, i1* %"2_0", align 1
  %1 = select i1 %"2_01", i1 true, i1 false
  store i1 %1, i1* %"4_0", align 1
  %"4_02" = load i1, i1* %"4_0", align 1
  store i1 %"4_02", i1* %"0", align 1
  %"03" = load i1, i1* %"0", align 1
  ret i1 %"03"
}
